added job lists

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,6 +58,7 @@
             background-color: #f0f0f0;
             color: #333;
             align-self: flex-start;
+            white-space: pre-line; /* Preserve line breaks */
         }
 
         #user-input {
